initialize gtopenspace flavor

--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -1,9 +1,9 @@
 # Settings for the app
 app:
   # HTML Title
-  title: Hey Duwamish!
+  title: Georgetown open spaces
   # Header name
-  name: "Hey Duwamish!"
+  name: "Georgetown open spaces"
   # Meta description that will show up in Google search results
   meta_description: "_(Welcome! We are a community of residents and stakeholders who are monitoring the cleanup of toxic waste in Seattle's Duwamish River.)"
   # Meta author that will show up in Google search results
@@ -456,35 +456,35 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
-  # greenwall:
-  #   label: _(Green Screen Vote)
-  #   rules:
-  #     - condition: '{{layer.focused}} === true'
-  #       icon:
-  #         iconUrl: /static/css/images/markers/marker-greenwall.png
-  #         shadowUrl: /static/css/images/marker-shadow.png
-  #         iconSize: [50, 60]
-  #         iconAnchor: [25, 60]
-  #         shadowSize: [50, 60]
-  #         shadowAnchor: [14, 60]
+  greenwall:
+    label: _(Green Screen Vote)
+    rules:
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
 
-  #     - condition: '{{map.zoom}} < 15'
-  #       icon:
-  #         iconUrl: /static/css/images/markers/marker-greenwall.png
-  #         iconSize: [10, 12]
-  #         iconAnchor: [5, 12]
+      - condition: '{{map.zoom}} < 15'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
 
-  #     - condition: '{{map.zoom}} < 18'
-  #       icon:
-  #         iconUrl: /static/css/images/markers/marker-greenwall.png
-  #         iconSize: [18, 21.75]
-  #         iconAnchor: [9, 21.75]
+      - condition: '{{map.zoom}} < 18'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [18, 21.75]
+          iconAnchor: [9, 21.75]
 
-  #     - condition: '{{map.zoom}} >= 18'
-  #       icon:
-  #         iconUrl: /static/css/images/markers/marker-greenwall.png
-  #         iconSize: [38, 46]
-  #         iconAnchor: [19, 46]
+      - condition: '{{map.zoom}} >= 18'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
 
   # using temporary icons
   air_watch:
@@ -641,9 +641,9 @@ place:
 
 
   #### begin dynamic form config ####
-  place_detail:
+  #TODO: maybe add an autocomplete
+  categories:
     observation:
-      includeOnForm: false
       name: location_type
       dataset: duwamish
       datasetSlug: report
@@ -680,7 +680,6 @@ place:
           placeholder: _(Enter description...)
           optional: false
     question:
-      includeOnForm: false
       name: location_type
       dataset: duwamish
       datasetSlug: report
@@ -700,7 +699,6 @@ place:
           display_prompt: _(My question:)
           placeholder: _(Enter question...)
     idea:
-      includeOnForm: false
       name: location_type
       dataset: duwamish
       datasetSlug: report
@@ -721,7 +719,6 @@ place:
           placeholder: _(Description...)
           optional: false
     complaint:
-      includeOnForm: false
       name: location_type
       dataset: duwamish
       datasetSlug: report
@@ -742,7 +739,6 @@ place:
           placeholder: _(Description...)
           optional: false
     air_watch:  #defines a top-level form category
-      includeOnForm: false
       name: location_type  #needs to be "location_type"
       dataset: air
       datasetSlug: air
@@ -885,7 +881,6 @@ place:
           display_prompt: _(Additional comments:)
           optional: true   
     tree:
-      includeOnForm: true
       name: location_type
       dataset: trees
       datasetSlug: trees
@@ -1065,10 +1060,8 @@ story:
   test_story1:
       tagline: _(Check out other reports like this one!)
       order: 
-        - report/413
-        - report/982
-        - report/305
-        - report/997
+        - idea/317
+        - idea/319
   test_story2:
       tagline: _(Explore South Park priority sites like this one)
       order: 
