--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -1068,6 +1068,7 @@ story:
       tagline: _(Explore South Park priority sites like this one)
       order: 
         - concord
+        - trees/229
         - skatepark
         - cesar-chavez
         - south-park-community-center
