--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -621,7 +621,7 @@ activity:
   # Place Types
 
 place:
-  dataset_slug: report # default is 'place'
+  #dataset_slug: report # default is 'place'
   adding_supported: true
   add_button_label: _(Add a report to the map!)
   # Labels for the buttons that toggle the map and list views
@@ -642,7 +642,6 @@ place:
       includeOnForm: false
       name: location_type
       dataset: duwamish
-      datasetSlug: report
       icon_url: /static/css/images/markers/marker-observation.png
       value: observation
       label: _(Observation)
@@ -679,7 +678,6 @@ place:
       includeOnForm: false
       name: location_type
       dataset: duwamish
-      datasetSlug: report
       icon_url: /static/css/images/markers/marker-question.png
       value: question
       label: _(Question)
@@ -699,7 +697,6 @@ place:
       includeOnForm: false
       name: location_type
       dataset: duwamish
-      datasetSlug: report
       icon_url: /static/css/images/markers/marker-idea.png
       value: idea
       label: _(Idea)
@@ -720,7 +717,6 @@ place:
       includeOnForm: false
       name: location_type
       dataset: duwamish
-      datasetSlug: report
       icon_url: /static/css/images/markers/marker-complaint.png
       value: complaint
       label: _(Complaint)
@@ -741,7 +737,6 @@ place:
       includeOnForm: false
       name: location_type  #needs to be "location_type"
       dataset: air
-      datasetSlug: air
       icon_url: /static/css/images/markers/marker-greenwall.png  #TEMPORARY
       value: air_watch  #internal value used for this category
       label: _(Air watch)  #label for this category
@@ -884,7 +879,6 @@ place:
       includeOnForm: true
       name: location_type
       dataset: trees
-      datasetSlug: trees
       icon_url: /static/css/images/markers/marker-tree.png
       value: tree
       label: _(Tree)
