--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -428,19 +428,19 @@ place_types:
 
       - condition: '{{map.zoom}} < 11'
         icon:
-          iconUrl: /static/css/images/markers/dot-f95016.png
+          iconUrl: /static/css/images/markers/marker-star.png
           iconSize: [10, 12]
           iconAnchor: [5, 12]
 
       - condition: '{{map.zoom}} < 16'
         icon:
-          iconUrl: /static/css/images/markers/marker-e1264d.png
+          iconUrl: /static/css/images/markers/marker-star.png
           iconSize: [15, 18]
           iconAnchor: [7.5, 18]
 
       - condition: '{{map.zoom}} >= 16'
         icon:
-          iconUrl: /static/css/images/markers/marker-e1264d.png
+          iconUrl: /static/css/images/markers/marker-star.png
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
@@ -635,7 +635,7 @@ place:
     feature:
       name: location_type
       dataset: gtopenspace
-      datasetSlug: feature
+      datasetSlug: idea
       icon_url: /static/css/images/markers/marker-star.png
       value: feature
       label: _(Featured site)
