--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -559,8 +559,9 @@ place:
 
   #### begin dynamic form config ####
   #TODO: maybe add an autocomplete
-  categories:
+  place_detail:
     high:
+      includeOnForm: true
       name: location_type
       dataset: gtopenspace
       datasetSlug: idea
@@ -581,6 +582,7 @@ place:
           placeholder: _(Enter comment...)
           optional: true
     medium:
+      includeOnForm: true
       name: location_type
       dataset: gtopenspace
       datasetSlug: idea
@@ -601,6 +603,7 @@ place:
           placeholder: _(Enter comment...)
           optional: true
     low:
+      includeOnForm: true
       name: location_type
       dataset: gtopenspace
       datasetSlug: idea
@@ -622,6 +625,7 @@ place:
           optional: true
 
     feature:
+      includeOnForm: true      
       name: location_type
       dataset: gtopenspace
       datasetSlug: idea
