use correct template for story bars; remove story bars from list view

--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -559,7 +559,7 @@ place:
 
   #### begin dynamic form config ####
   #TODO: maybe add an autocomplete
-  place_detail:
+  categories:
     high:
       includeOnForm: true
       name: location_type
