--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -559,7 +559,7 @@ place:
 
   #### begin dynamic form config ####
   #TODO: maybe add an autocomplete
-  categories:
+  place_detail:
     high:
       includeOnForm: true
       name: location_type
