fix typo in place story list

--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -791,7 +791,7 @@ story:
         - idea/564
         - idea/572
         - idea/573
-        - idea 594
+        - idea/594
         - idea/595
         - idea/574
         - idea/575
