--- a/src/flavors/snoqualmie/config.yml
+++ b/src/flavors/snoqualmie/config.yml
@@ -75,6 +75,10 @@ map:
       url: https://smartercleanup.cartodb.com/api/v2/viz/d33eff70-0bee-11e6-97dd-0e787de82d45/viz.json
       type: cartodb
 
+    - id: snoqualmie
+      type: place
+      slug: report
+
 # The keys show up in the dropdown list when you are adding a new place
 
 # The values map the place type to map icons (defined below).
@@ -332,7 +336,6 @@ activity:
   # Place Types
 
 place:
-  dataset_slug: report # default is 'place'
   adding_supported: true
   add_button_label: _(Add a comment to the map)
   # Labels for the buttons that toggle the map and list views
@@ -346,51 +349,98 @@ place:
 
   location_item_name: location
 
-  items:
-    - prompt: _(Type of report)
-      type: select
-      options:
-        - label: _(Observation)
-          value: observation
-        - label: _(Question)
-          value: question
-        - label: _(Idea)
-          value: idea
-        - label: _(Complaint)
-          value: complaint
+  #### begin dynamic form config ####
+  place_detail:
+    observation:
+      includeOnForm: true
       name: location_type
-      attrs:
-        - key: required
-    - prompt: _(Title of report)
+      dataset: snoqualmie
+      icon_url: /static/css/images/markers/marker-observation.png
+      value: observation
+      label: _(Observation)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title of your observation:)
+          display_prompt: _(Title:)
+          placeholder: _(Enter title...)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: _(Description of this observation:)
+          display_prompt: _(Further description:)
+          placeholder: _(Enter description...)
+          optional: false
+    question:
+      includeOnForm: true
+      name: location_type
+      dataset: snoqualmie
+      icon_url: /static/css/images/markers/marker-question.png
+      value: question
+      label: _(Question)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title of your question:)
+          display_prompt: _(Title:)
+          placeholder: _(Enter title...)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: "_(What's your question?)"
+          display_prompt: _(My question:)
+          placeholder: _(Enter question...)
+    idea:
+      includeOnForm: true
+      name: location_type
+      dataset: snoqualmie
+      icon_url: /static/css/images/markers/marker-idea.png
+      value: idea
+      label: _(Idea)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title of your idea:)
+          placeholder: _(Enter title...)
+          display_prompt: _(Title:)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: _(Describe your idea below:)
+          display_prompt: "_(Here's my idea:)"
+          placeholder: _(Description...)
+          optional: false
+    complaint:
+      includeOnForm: true
+      name: location_type
+      dataset: snoqualmie
+      icon_url: /static/css/images/markers/marker-complaint.png
+      value: complaint
+      label: _(Complaint)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title of your complaint:)
+          placeholder: _(Enter title...)
+          display_prompt: _(Title:)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: "_(What's your complaint?)"
+          display_prompt: _(I have the following complaint:)
+          placeholder: _(Description...)
+          optional: false
+
+  # define form elements that appear on every form here
+  common_form_elements:
+    - name: submitter_name
       type: text
-      name: name
-      optional:
-      attrs:
-        - key: required
-        - key: placeholder
-          value: _(Enter title)
-        - key: size
-          value: 30
-    - prompt: _(Description)
-      type: textarea
-      name: description
+      prompt: _(Your name)
+      placeholder: _(Name)
       optional: true
-      attrs:
-        - key: placeholder
-          value: _(Description...)
-    - prompt: _(Your Name)
+    - name: private-submitter_email
       type: text
-      name: submitter_name
-      optional: true
-      sticky: true
-      attrs:
-        - key: placeholder
-          value: _(Name)
-        - key: size
-          value: 30
-    - prompt: _(Your Email)
-      type: text
-      name: private-submitter_email
+      prompt: _(Your Email)
       optional: true
       sticky: true
       attrs:
@@ -398,14 +448,18 @@ place:
           value: _(Receive email updates on your report)
         - key: size
           value: 30
-    - prompt: _(Image)
-      inputfile_label: _(Add an Image)
+    - name: my_image
       type: file
-      name: my_image
+      prompt: _(Image)
+      inputfile_label: _(Add an Image)
       optional: true
       attrs:
         - key: accept
           value: image/*
+    - type: submit
+      label: _(Put it on the map!)
+
+  #### end dynamic form config ####
 
 survey:
   submission_type: comments
