--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -51,19 +51,15 @@ map:
       type: cartodb
 
   # Legend Layers
-    - id: gtopenspace
-      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
-      type: landmark
-      slug: idea
-      sources: 
-        - "http://a.tiles.mapbox.com/v4/smartercleanup.0f2jhd96/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
+    - id: gtlayers
+      url: https://smartercleanup.carto.com/api/v2/viz/eeac79a6-551b-11e6-a46e-0e3ff518bd15/viz.json
+      type: cartodb
 
     - id: restoration
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
       type: landmark
       sources:
         - "http://a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
-        - "http://a.tiles.mapbox.com/v4/smartercleanup.0f2jhd96/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
 
     - id: gtopenspace
       type: place
@@ -398,8 +394,7 @@ place_types:
           iconUrl: /static/css/images/markers/marker-e1264d.png
           iconSize: [38, 46]
           iconAnchor: [19, 46]
-
-  feature:
+  streetscape:
     label: _(Featured site)
     rules:
       - condition: '{{layer.focused}} === true'
@@ -429,6 +424,35 @@ place_types:
           iconSize: [30, 30]
           iconAnchor: [15, 15]
 
+  park-improvement:
+    label: _(Featured site)
+    rules:
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star-green.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 30]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 30]
+
+      - condition: '{{map.zoom}} < 11'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star-green.png
+          iconSize: [12, 12]
+          iconAnchor: [6, 6]
+
+      - condition: '{{map.zoom}} < 15'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star-green.png
+          iconSize: [18, 18]
+          iconAnchor: [9, 9]
+
+      - condition: '{{map.zoom}} >= 15'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star-green.png
+          iconSize: [30, 30]
+          iconAnchor: [15, 15]
 
 # Sidebar and activity stream should be enabled and disabled together!
 # note: sidebar is aka 'MasterLegend'
@@ -618,14 +642,33 @@ place:
           display_prompt:
           placeholder: _(Enter comment...)
           optional: true
-
-    feature:
-      includeOnForm: false     
+    streetscape:
+      includeOnForm: true     
       name: location_type
       dataset: gtopenspace
       icon_url: /static/css/images/markers/marker-star.png
-      value: feature
-      label: _(Featured site)
+      value: streetscape
+      label: _(Streetscape)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title:)
+          display_prompt: _(Title:)
+          placeholder: _(Enter title...)
+          optional: true
+        - name: comment
+          type: textarea
+          prompt: _(Comment:)
+          display_prompt:
+          placeholder: _(Enter comment...)
+          optional: true
+    park-improvement:
+      includeOnForm: true     
+      name: location_type
+      dataset: gtopenspace
+      icon_url: /static/css/images/markers/marker-star.png
+      value: park-improvement
+      label: _(Park improvement)
       fields:
         - name: title
           type: text
