turn off featured sites from form

--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -637,7 +637,7 @@ place:
           placeholder: _(Enter comment...)
           optional: true
     streetscape:
-      includeOnForm: true     
+      includeOnForm: false     
       name: location_type
       dataset: gtopenspace
       icon_url: /static/css/images/markers/marker-star.png
@@ -657,7 +657,7 @@ place:
           placeholder: _(Enter comment...)
           optional: true
     park-improvement:
-      includeOnForm: true     
+      includeOnForm: false     
       name: location_type
       dataset: gtopenspace
       icon_url: /static/css/images/markers/marker-star.png
