--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -56,6 +56,10 @@ map:
       type: cartodb
       url: "https://smartercleanup.carto.com/api/v2/viz/66a32abe-567e-11e6-9878-0e3ebc282e83/viz.json"
 
+    - id: gtsurvey
+      type: cartodb
+      url: https://smartercleanup.carto.com/api/v2/viz/0a3e681c-5686-11e6-8214-0e233c30368f/viz.json
+
     - id: restoration
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
       type: landmark
@@ -319,6 +323,10 @@ sidebar:
             - id: gtopenspace
               title: _(Community Reports)
               visibleDefault: true
+
+            - id: gtsurvey
+              title: _(Survey responses)
+              visibleDefault: false
 
             - id: gtlayers
               title: _(Map enhancement)
