control map zoom and layer visibility via story config

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -1052,26 +1052,42 @@ pages:
 
 story:
   test_story1:
-      tagline: _(Check out other reports like this one!)
-      default_zoom: 15
-      order: 
-        - url: air/588
-        - url: trees/593
-        - url: report/600
-        - url: concord
-          zoom: 5
+    tagline: _(Check out other reports like this one!)
+    # every story item will default to the zoom level and visible
+    # layers defined below. If a story element defines a different 
+    # zoom level and/or visible layers, it will use those wholesale 
+    # (that is, no default settings will be inherited).
+    default_zoom: 13
+    default_visible_layers:
+      - vision
+      - restoration
+    order: 
+      - url: air/588
+        visible_layers:
+          - reports
+      - url: trees/593
+        visible_layers:
+          - reports
+      - url: report/600
+        visible_layers:
+          - reports
+      - url: concord
+        zoom: 15
 
   test_story2:
-      tagline: _(Explore South Park priority sites like this one)
-      default_zoom: 17
-      order: 
-        - url: skatepark
-        - url: cesar-chavez
-          zoom: 15
-        - url: south-park-community-center
-          zoom: 15
-        - url: 14th-ave
-        - url: rose-end
-        - url: 12th-and-elmgrove
-        - url: marra
-          zoom: 10
+    tagline: _(Explore South Park priority sites like this one)
+    default_zoom: 17
+    default_visible_layers:
+      - vision
+      - reports
+    order: 
+      - url: skatepark
+      - url: cesar-chavez
+        zoom: 15
+      - url: south-park-community-center
+        zoom: 15
+      - url: 14th-ave
+      - url: rose-end
+      - url: 12th-and-elmgrove
+      - url: marra
+        zoom: 10
