--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -381,22 +381,16 @@ sidebar:
       title: _(Activity Stream:)
 
     - id: reports_legend
-      title: _(Citizen Reports:)
+      title: _(Legend:)
       view: LegendView
       icon: info-circle
       items:
-        - title: _(Observations)
-          image: /static/css/images/markers/marker-observation.png
+        - title: _(Streetscape improvements)
+          image: /static/css/images/markers/marker-star.png
           url: /filter/observation
-        - title: _(Ideas)
-          image: /static/css/images/markers/marker-idea.png
+        - title: _(Park improvements)
+          image: /static/css/images/markers/marker-star-green.png
           url: /filter/idea
-        - title: _(Questions)
-          image: /static/css/images/markers/marker-question.png
-          url: /filter/question
-        - title: _(Complaints)
-          image: /static/css/images/markers/marker-complaint.png
-          url: /filter/complaint
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
@@ -416,7 +410,7 @@ place:
   action_text: _(added)
   title: _(Tell us more...)
   action_text: _(created)
-  anonymous_name: _(Someone)
+  anonymous_name: _(Georgetown Community)
   submit_button_label: _(Put it on the map!)
 
   location_item_name: location
